[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Pause/Exit.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pause/PauseGreen.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pause/Continue.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pause/MainMenu.png" type="Texture" id=4]
[ext_resource path="res://Sprites/TitleScreen/select.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=6]
[ext_resource path="res://Sounds/zapsplat_multimedia_button_click_007_53868 (online-audio-converter.com).wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "New Anim (2)"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.411765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MarginContainer"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 167.821, 26.4209 )
scale = Vector2( 3.14556, 4.95435 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/Sprite"]
autoplay = "New Anim"
playback_speed = 0.5
"anims/New Anim" = SubResource( 1 )
"anims/New Anim (2)" = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 129.0
margin_top = 66.0
margin_right = 191.0
margin_bottom = 113.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 62.0
margin_bottom = 13.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 5 )

[node name="Continue" type="TouchScreenButton" parent="MarginContainer/CenterContainer/VBoxContainer/TextureButton"]
normal = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 62.0
margin_bottom = 30.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="MainMenu" type="TouchScreenButton" parent="MarginContainer/CenterContainer/VBoxContainer/TextureButton2"]
normal = ExtResource( 4 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 62.0
margin_bottom = 47.0
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 5 )

[node name="Exit" type="TouchScreenButton" parent="MarginContainer/CenterContainer/VBoxContainer/TextureButton3"]
normal = ExtResource( 1 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
